added some p's to Details

--- a/ANGULAR/Modules and Routing/routing/routing/src/app/user/details/details.component.html
+++ b/ANGULAR/Modules and Routing/routing/routing/src/app/user/details/details.component.html
@@ -1,1 +1,5 @@
-<h1>Details Component</h1>
+<h1>Details</h1>
+<div>
+  <p>Name: {{ user?.name }}</p>
+  <p>Username: {{ user?.username }}</p>
+</div>
