added basic routing

--- a/ANGULAR/Modules and Routing/routing practise/practise/src/app/core/header/header.component.html
+++ b/ANGULAR/Modules and Routing/routing practise/practise/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-    <nav>
-        <p routerLink="/users/user-list">User List</p>
-    </nav>
+  <nav>
+    <li><a routerLink="/users/user-list">User List</a></li>
+  </nav>
 </div>
