implemented ngDoCheck logic

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
       <ng-template #loggedInTemplate>
         <ul>
           <li>
-            <a routerLink="/auth/profile">{{ user?.firstName }}'s Profile</a>
+            <a routerLink="/auth/profile">{{ user?.username }}'s Profile</a>
           </li>
           <li>
             <a routerLink="/auth/logout">Logout</a>
