--- a/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
@@ -34,7 +34,7 @@
   <nav>
     <ul>
       <li>
-        <a href="#">Home</a>
+        <a routerLink="/">Home</a>
       </li>
       <li>
         <a href="#">Themes</a>
