fixed a bug - app broke on browser search

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
@@ -40,7 +40,7 @@
         <a href="#">Themes</a>
       </li>
       <li>
-        <a href="#">New Theme</a>
+        <a routerLink="/theme/new">New Theme</a>
       </li>
     </ul>
   </nav>
