moved recent and main components and created welc

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/core/home/home.component.scss
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/core/home/home.component.scss
@@ -1,17 +1,3 @@
-.container {
-    width: 90%;
-    margin: auto;
-    padding-bottom: 4.5em;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-}
-
-main {
-    width: 50%;
-}
-
-/* welcome component */
 
 .welcome {
     padding: 0.3em 0.5em;
@@ -22,7 +8,7 @@ main {
 }
 
 .welcome h3 {
-    background-color: #4ebced;
+    background-color: #12b2d6;
     border-radius: 0.3em;
     width: 100%;
     padding: 0.3em 1em;
