made changes to welcome and shared modules

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/core/header/header.component.html
@@ -37,7 +37,7 @@
         <a routerLink="/">Home</a>
       </li>
       <li>
-        <a href="#">Themes</a>
+        <a routerLink="/theme/recent">Themes</a>
       </li>
       <li>
         <a routerLink="/theme/new">New Theme</a>
