Working auth guards

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
@@ -25,9 +25,9 @@
             Password must be at least 4 characters!
         </p> -->
 
-        <button disabled>Login</button>
+        <button (click)="loginHandler">Login</button>
 
-        <p class="text-center">
+        <p class="text-center"> 
             Have an account?
             <a href="#">Register</a>
         </p>
