--- a/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/theme/recent-posts/recent-posts.component.html
+++ b/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/theme/recent-posts/recent-posts.component.html
@@ -1,12 +1,14 @@
 <aside>
-  <div class="aside">
+  <div class="aside" *ngFor="let post of posts">
     <h2 class="title">Recent posts</h2>
     <div>
       <div class="aside-theme">
         <a href="#">
-          <h3>Angular 10</h3>
-          <p>Silvester</p>
-          <p><span>2020-10-14T10:11:52.264Z</span></p>
+          <h3>{{ post.themeId.themeName }}</h3>
+          <p>{{ post.userId.username }}</p>
+          <p>
+            <span>{{ post.created_at }}</span>
+          </p>
         </a>
       </div>
     </div>
