login and home routing works

--- a/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/core/header/header.component.html
+++ b/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/core/header/header.component.html
@@ -6,7 +6,7 @@
       <div class="mini-navbar">
           <ul>
               <li>
-                  <a href="#">Login</a>
+                  <a routerLink="/auth/login">Login</a>
               </li>
               <li>
                   <a href="#">Register</a>
