--- a/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/core/header/header.component.html
+++ b/ANGULAR/Modules and Routing/Softuni-Forum-Practise/softuni-forum-practise/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
                   <a routerLink="/auth/login">Login</a>
               </li>
               <li>
-                  <a href="#">Register</a>
+                  <a  routerLink="/auth/register">Register</a>
               </li>
           </ul>
       </div>
