--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -1,1 +1,11 @@
-<p>todo-list works!</p>
+<h2 class="title">Kris's //TODO List</h2>
+<div class="container">
+  <input type="text" placeholder="Enter Task" #task />
+</div>
+<div>
+  <button (click)="addTask(task.value)">Add Task</button>
+</div>
+<h3>Current Tasks</h3>
+<div *ngFor="let task of tasks">
+  <li>{{ task }}</li>
+</div>
