added guard for empty value

--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -6,6 +6,8 @@
   </div>
 </form>
 
+
+
 <div *ngFor="let task of tasks">
-  <li>{{ task }}</li>
+  <li>{{ task }} <button>Delete</button></li>
 </div>
