Added delete functionality

--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -9,5 +9,5 @@
 
 
 <div *ngFor="let task of tasks">
-  <li>{{ task }} <button>Delete</button></li>
+  <li>{{ task }} <button (click)="removeTask(task)">Delete</button></li>
 </div>
