--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -1,13 +1,10 @@
-<h2>My //TODO List</h2>
+<h2>My //TODO List {{count}}</h2>
 <form #todoForm="ngForm" (ngSubmit)="addTask(todoForm.value, todoForm)">
   <div>
-    <input type="text" id="todo" name="todo" placeholder="enter task here" [ngModel]="todo" />
+    <input #inputTodo type="text" id="todo" name="todo" placeholder="enter task here" [ngModel]="todo" />
     <button >Submit</button>
   </div>
 </form>
-
-
-
 <div *ngFor="let task of tasks">
   <li>{{ task }} <button (click)="removeTask(task)">Delete</button></li>
 </div>
