changed the count design

--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -1,8 +1,16 @@
-<h2>My //TODO List {{count}}</h2>
+<h2>My //TODO List</h2>
+<p>Current Todo's: {{ count }}</p>
 <form #todoForm="ngForm" (ngSubmit)="addTask(todoForm.value, todoForm)">
   <div>
-    <input #inputTodo type="text" id="todo" name="todo" placeholder="enter task here" [ngModel]="todo" />
-    <button >Submit</button>
+    <input
+      #inputTodo
+      type="text"
+      id="todo"
+      name="todo"
+      placeholder="enter task here"
+      [ngModel]="todo"
+    />
+    <button>Submit</button>
   </div>
 </form>
 <div *ngFor="let task of tasks">
