--- a/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
+++ b/ANGULAR/todo-list/todo-list/src/app/todo/todo-list/todo-list.component.html
@@ -16,3 +16,10 @@
 <div *ngFor="let task of tasks">
   <li>{{ task }} <button (click)="removeTask(task)">Delete</button></li>
 </div>
+
+<div>
+  <h3>Completed Tasks</h3>
+  <div *ngFor="let task of completedTasks">
+    <li>{{ task }}</li>
+  </div>
+</div>
