--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
@@ -1,85 +1,58 @@
-<form class="register" action="" method="post">
+<form [formGroup]="form" class="register" action="" method="post">
   <fieldset>
     <h2>Registration Form</h2>
 
     <!-- username -->
     <p class="field field-icon">
-      <label for="username"
-        ><span><i class="fas fa-user"></i></span
-      ></label>
-      <input
-        class="input-error"
-        type="text"
-        name="username"
-        id="username"
-        placeholder="Johny"
-      />
+      <label for="username"><span><i class="fas fa-user"></i></span></label>
+      <input class="input-error" type="text" formControlName="username" id="username" placeholder="Johny" />
     </p>
     <p class="error">Username is required!</p>
 
     <!-- email -->
     <p class="field field-icon">
-      <label for="email"
-        ><span><i class="fas fa-envelope"></i></span
-      ></label>
-      <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="john.doe@gmail.com"
-      />
+      <label for="email"><span><i class="fas fa-envelope"></i></span></label>
+      <input type="email" formControlName="email" id="email" placeholder="john.doe@gmail.com" />
     </p>
-    <!-- <p class="error">
-            Email is required!
-        </p>
-        <p class="error">
-            Email is not valid!
-        </p> -->
+    <p class="error">
+      Email is required!
+    </p>
+    <p class="error">
+      Email is not valid!
+    </p>
 
     <!-- telephone -->
     <p class="field field-icon">
-      <label for="tel"
-        ><span><i class="fas fa-phone"></i></span
-      ></label>
+      <label for="tel"><span><i class="fas fa-phone"></i></span></label>
       <select name="select-tel" id="select-tel" class="tel">
         <option value="00359">+359</option>
       </select>
-      <input type="text" name="tel" id="tel" placeholder="885 888 888" />
+      <input type="text" formControlName="tel" id="tel" placeholder="885 888 888" />
     </p>
 
-    <!-- password -->
-    <p class="field field-icon">
-      <label for="password"
-        ><span><i class="fas fa-lock"></i></span
-      ></label>
-      <input
-        type="password"
-        name="password"
-        id="password"
-        placeholder="******"
-      />
-    </p>
-    <!-- <p class="error">
-            Password is required!
-        </p>
-        <p class="error">
-            Password must be at least 4 characters!
-        </p> -->
-
-    <!-- rePassword -->
-    <p class="field field-icon">
-      <label for="rePassword"
-        ><span><i class="fas fa-lock"></i></span
-      ></label>
-      <input
-        type="password"
-        name="rePassword"
-        id="rePassword"
-        placeholder="******"
-      />
-    </p>
-    <!-- <p class="error">Repeat Password does not match password!</p> -->
-
+    <ng-container formGroupName="pass">
+     
+      <!-- password -->
+      <p class="field field-icon">
+        <label for="password"><span><i class="fas fa-lock"></i></span></label>
+        <input type="password" formControlName="password" id="password" placeholder="******" />
+      </p>
+      <p class="error">
+        Password is required!
+      </p>
+      <p class="error">
+        Password must be at least 4 characters!
+      </p>
+  
+      <!-- rePassword -->
+      <p class="field field-icon">
+        <label for="rePassword"><span><i class="fas fa-lock"></i></span></label>
+        <input type="password" formControlName="repass" id="rePassword" placeholder="******" />
+      </p>
+      <!--     <!-- <p class="error">Repeat Password does not match password!</p> -->
+      -->
+    </ng-container>
+ 
     <button disabled>Create Account</button>
 
     <p class="text-center">
