created passwords validator

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
@@ -24,7 +24,7 @@
     <!-- telephone -->
     <p class="field field-icon">
       <label for="tel"><span><i class="fas fa-phone"></i></span></label>
-      <select name="select-tel" id="select-tel" class="tel">
+      <select name="select-tel" id="select-tel" class="tel" formControlName="ext">
         <option value="00359">+359</option>
       </select>
       <input type="text" formControlName="tel" id="tel" placeholder="885 888 888" />
