--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
@@ -3,7 +3,7 @@
         <h2>Login Form</h2>
         <p class="field field-icon">
             <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-            <input #emailInput="ngModel" class="input-error" ngModel required [appEmail]="['bg', 'com']" type="email"
+            <input #emailInput="ngModel" class="input-error" ngModel required [appEmail]="domains" type="email"
                 name="email" id="email" placeholder="john.doe@gmail.com" />
         </p>
 
