--- a/ANGULAR/Angular Components/Workshop/forum/src/app/theme/new-theme/new-theme.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/theme/new-theme/new-theme.component.html
@@ -2,31 +2,30 @@
     <div class="header-background">
         <span>New Theme</span>
     </div>
-    <form>
+    <!--ReactiveForm-->
+    <form [formGroup]="form">
         <div class="new-theme-title">
             <label for="themeName">Title <span class="red">*</span></label>
-            <input type="text" name="themeName" id="themeName">
-            <p class="error">
-                Theme name is required.
-            </p>
-            <p class="error">
-                Theme name must be at least 5 characters long.
-            </p>
+            <input type="text" formControlName="themeTitle" id="themeName" />
+            <!-- themeName validators container -->
+            <ng-container *ngIf="form.get('themeTitle')?.touched">
+                <p class="error" *ngIf="form.get('themeTitle')?.errors?.['required']">
+                    Theme name is required.
+                </p>
+                <p class="error" *ngIf="form.get('themeTitle')?.errors?.['minlength']">
+                    Theme name must be at least 5 characters long.
+                </p>
+            </ng-container>
         </div>
         <div class="new-theme-content">
             <label for="postText">Post <span class="red">*</span></label>
-            <textarea type="text" name="postText" id="postText" rows="8" class="height"></textarea>
-            <p class="error">
-                The field with your post is required.
-            </p>
-            <p class="error">
-                Post must be at least 10 characters long.
-            </p>
+            <textarea type="text" formControlName="themeContent" id="postText" rows="8" class="height"></textarea>
+            <p class="error">The field with your post is required.</p>
+            <p class="error">Post must be at least 10 characters long.</p>
         </div>
         <div class="new-theme-buttons">
             <button class="cancel">Cancel</button>
             <button class="public">Post</button>
         </div>
-
     </form>
 </div>
