added profile component and way to navigate

--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
         <button [disabled]="form.invalid">Login</button>
         <p class="text-center">
             Have an account?
-            <a href="#">Register</a>
+            <a routerLink="/auth/register">Register</a>
         </p>
     </fieldset>
 </form>
