--- a/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/auth/register/register.component.html
@@ -7,9 +7,15 @@
       <label for="username"><span><i class="fas fa-user"></i></span></label>
       <input class="input-error" type="text" formControlName="username" id="username" placeholder="Johny" />
     </p>
-    <p class="error" *ngIf="form.get('username')?.errors?.['required'] &&form.get('username')?.touched">
-      Username is required!
-    </p>
+    <ng-container *ngIf="form.get('username')?.touched">
+      <p class="error" *ngIf="form.get('username')?.errors?.['required']">
+        Username is required!
+      </p>
+      <p class="error" *ngIf="form.get('username')?.errors?.['minlength']">
+        Username must be atleast 5 characters!
+      </p>
+    </ng-container>
+   
 
     <!-- email -->
     <p class="field field-icon">
