--- a/ANGULAR/Angular Components/Workshop/forum/src/app/theme/recent-posts/recent-posts.component.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/app/theme/recent-posts/recent-posts.component.html
@@ -4,7 +4,7 @@
     <div>
       <div *ngFor="let post of posts" class="aside-theme">
         <a href="#">
-          <h3>{{post.themeId.themeName}}</h3>
+          <h3>{{post.themeId.themeName | shorten}}</h3>
           <p>{{post.userId.username}}</p>
           <p><span>{{post.created_at}}</span></p>
         </a>
