--- a/nodeJS Practise/theaters/views/login.hbs
+++ b/nodeJS Practise/theaters/views/login.hbs
@@ -1,6 +1,15 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+ <main>
+            <form action="/" method="">
+                <h2>Login</h2>
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" placeholder="Username" value="">
+                </div>
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" placeholder="Password" value="">
+                </div>
+
+                <button class="btn" type="submit">Login</button>
+            </form>
+        </main>
