--- a/nodeJS Practise/theaters/views/register.hbs
+++ b/nodeJS Practise/theaters/views/register.hbs
@@ -1,7 +1,21 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+<main>
+  <form action="" method="">
+    <h2>Register</h2>
+    <div class="on-dark">
+      <label for="username">Username:</label>
+      <input type="text" placeholder="Steven" value="" />
+    </div>
+
+    <div class="on-dark">
+      <label for="password">Password:</label>
+      <input type="password" placeholder="********" value="" />
+    </div>
+
+    <div class="on-dark">
+      <label for="repeatPassword">Repeat Password:</label>
+      <input type="password" placeholder="********" value="" />
+    </div>
+
+    <button class="btn" type="submit">Register</button>
+  </form>
+</main>
