--- a/nodeJS Practise/theaters/views/register.hbs
+++ b/nodeJS Practise/theaters/views/register.hbs
@@ -1,21 +1,21 @@
 <main>
-  <form action="" method="">
+  <form action='/auth/register' method='post'>
     <h2>Register</h2>
-    <div class="on-dark">
-      <label for="username">Username:</label>
-      <input type="text" placeholder="Steven" value="" />
+    <div class='on-dark'>
+      <label for='username'>Username:</label>
+      <input type='text' placeholder='Steven' name='username' />
     </div>
 
-    <div class="on-dark">
-      <label for="password">Password:</label>
-      <input type="password" placeholder="********" value="" />
+    <div class='on-dark'>
+      <label for='password'>Password:</label>
+      <input type='password' placeholder='********' name='password' />
     </div>
 
-    <div class="on-dark">
-      <label for="repeatPassword">Repeat Password:</label>
-      <input type="password" placeholder="********" value="" />
+    <div class='on-dark'>
+      <label for='repeatPassword'>Repeat Password:</label>
+      <input type='password' placeholder='********' name='repass' />
     </div>
 
-    <button class="btn" type="submit">Register</button>
+    <button class='btn' type='submit'>Register</button>
   </form>
 </main>
