created item model

--- a/JSWeb-exams/auction-house 2/views/layouts/main.hbs
+++ b/JSWeb-exams/auction-house 2/views/layouts/main.hbs
@@ -20,11 +20,11 @@
             <nav class="main-nav nav-mid">
                 <ul>
                     <li>
-                        <a href="#">Browse</a>
+                        <a href="/site/catalog">Browse</a>
                     </li>
                     <!-- User actions -->
                     <li class="user">
-                        <a href="#">Publish</a>
+                        <a href="/site/publish">Publish</a>
                     </li>
 
                     <!-- Bonus action -->
@@ -35,14 +35,14 @@
                     -->
 
                     <li class="user">
-                        <a href="#">Logout</a>
+                        <a href="/auth/logout">Logout</a>
                     </li>
                     <!-- Guest actions -->
                     <li class="guest">
-                        <a href="#">Register</a>
+                        <a href="/auth/register">Register</a>
                     </li>
                     <li class="guest">
-                        <a href="#">Login</a>
+                        <a href="/auth/login">Login</a>
                     </li>
                 </ul>
             </nav>
