fixed login and register

--- a/JSWeb-exams/auction-house 2/views/login.hbs
+++ b/JSWeb-exams/auction-house 2/views/login.hbs
@@ -7,7 +7,7 @@
 
     <div class='item padded align-center'>
 
-      <form class='aligned' method='' action=''>
+      <form class='aligned' method='post' action='/auth/login'>
 
         <label>
           <span>Email</span>
